force-app/main/default/objects/TextoArgumentario__c/TextoArgumentario__c.object-meta.xml
<CustomObject>
    <description>Textos para los argumentarios, permite indicar diferentes textos para las pantallas de los argumentarios de llamadas</description>
    <label>Texto de Argumentario</label>
    <nameField>
        <label>Nombre de Texto de Argumentario</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Textos de Argumentario</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>