force-app/main/default/objects/TextoArgumentario__c/fields/DescripcionTexto10__c.field-meta.xml
<CustomField>
    <fullName>DescripcionTexto10__c</fullName>
    <description>Descripción para poder gestionar bien dónde y bajo que condiciones se incluyen los textos en el Argumentario</description>
    <inlineHelpText>Descripción para poder gestionar bien dónde y bajo que condiciones se incluyen los textos en el Argumentario</inlineHelpText>
    <label>Descripción Texto 10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>