force-app/main/default/objects/TextoArgumentario__c/fields/Etiqueta1__c.field-meta.xml
<CustomField>
    <fullName>Etiqueta1__c</fullName>
    <description>Texto en formato texto 255 caracteres que se mostrará en el flujo sin formato alguno, usado para preguntas o anotaciones sencillas</description>
    <inlineHelpText>Texto en formato texto 255 caracteres que se mostrará en el flujo sin formato alguno, usado para preguntas o anotaciones sencillas</inlineHelpText>
    <label>Etiqueta1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>