force-app/main/default/objects/TextoArgumentario__c/fields/Flujo__c.field-meta.xml
<CustomField>
    <fullName>Flujo__c</fullName>
    <description>Nombre de API del flujo, es el que se usará para recuperar los textos de las pantallas que se van a mostrar, es importante que este nombre sea un copy/paste desde el nombre del api, sino habrá problemas para su recuperación</description>
    <inlineHelpText>Nombre de API del flujo, es el que se usará para recuperar los textos de las pantallas que se van a mostrar, es importante que este nombre sea un copy/paste desde el nombre del api, sino habrá problemas para su recuperación</inlineHelpText>
    <label>Flujo</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>