force-app/main/default/objects/TextoArgumentario__c/fields/IdExterno__c.field-meta.xml
<CustomField>
    <fullName>IdExterno__c</fullName>
    <description>Id Externo para cargas y exportaciones de registros, se compone del campo Flujo__c un guión y el campo Idioma__c
De esta forma los registros son únicos para el idioma y el flujo al que afectan</description>
    <externalId>true</externalId>
    <label>IdExterno</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>