force-app/main/default/objects/TextoArgumentario__c/fields/Idioma__c.field-meta.xml
<CustomField>
    <fullName>Idioma__c</fullName>
    <defaultValue>&quot;Español&quot;</defaultValue>
    <description>Idioma del texto, en un principio será solo Castellano, pero se deja este campo para contemplar la posibilidad de recuperar más idiomas. Filtra por el campo LanguageLocaleKey del usuario para obtener los registros</description>
    <inlineHelpText>Idioma del texto, en un principio será solo Castellano, pero se deja este campo para contemplar la posibilidad de recuperar más idiomas. Filtra por el campo LanguageLocaleKey del usuario para obtener los registros</inlineHelpText>
    <label>Idioma</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>es</fullName>
                <label>Español</label>
            </value>
            <value>
                <fullName>en_US</fullName>
                <default>true</default>
                <label>Inglés</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>