force-app/main/default/objects/TextoArgumentario__c/fields/Texto10__c.field-meta.xml
<CustomField>
    <fullName>Texto10__c</fullName>
    <description>Texto en formato &quot;Texto Enriquecido&quot; de 32.768 caracteres que se mostrará en el flujo</description>
    <inlineHelpText>Texto en formato &quot;Texto Enriquecido&quot; de 32.768 caracteres que se mostrará en el flujo</inlineHelpText>
    <label>Texto 10</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>