force-app/main/default/objects/TextoArgumentario__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Flujo__c</columns>
    <columns>Idioma__c</columns>
    <columns>DescripcionTexto1__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>