force-app/main/default/objects/TextoArgumentario__c/listViews/Argumenatarios_ESP.listView-meta.xml
<ListView>
    <fullName>Argumenatarios_ESP</fullName>
    <columns>NAME</columns>
    <columns>IdExterno__c</columns>
    <columns>Flujo__c</columns>
    <columns>Idioma__c</columns>
    <columns>DescripcionTexto1__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Idioma__c</field>
        <operation>equals</operation>
        <value>es</value>
    </filters>
    <filters>
        <field>DescripcionTexto1__c</field>
        <operation>notEqual</operation>
        <value>No aplica</value>
    </filters>
    <label>Argumentarios ESP</label>
</ListView>